# minimal-dynamic.shared.library-cmake

./: CMakeLists.txt  README.md  build_module.bat  debug.cpp  module.ahk  module.cpp  module.h  run.bat
references/: Compiling C++ DLL and passing a string by reference - AutoHotkey Community.url
